--- a/_gulp/_jade/_include/_footer.jade
+++ b/_gulp/_jade/_include/_footer.jade
@@ -30,6 +30,6 @@ footer.footer
         .footer__button.hidden Меню
 
       div.last.hidden-xs
-        .copyright © 2016 arm.group
+        .copyright © 2016 apm.group
           br
           | Все права защищены
