--- a/_gulp/_jade/client.jade
+++ b/_gulp/_jade/client.jade
@@ -19,6 +19,12 @@ html(lang="ru")
       .container
         
         .h1 Стать клиентом
+        
+        .clients
+          .clients__casousel
+            ul
+              li
+                .clients__casousel__block
     
     include ./_include/_footer
     //- div(style="height: 900px; background-color: #000")
