--- a/_gulp/_jade/index.jade
+++ b/_gulp/_jade/index.jade
@@ -28,7 +28,10 @@ html(lang="ru")
               .hay__line3: i
               .hay__line4: i
               a(href="#").hay__link
-              .hay__strong хэй
+              .hay__strong
+                .hay__strong__mask
+                  .hay__strong__text.hay__strong__text--progress хэй
+                .hay__strong__text.hay__strong__text--preload хэй
               .hay__text
                 .hay__text__name apm.group
                 p
