--- a/_gulp/_jade/ua-special-offers.jade
+++ b/_gulp/_jade/ua-special-offers.jade
@@ -135,6 +135,20 @@ html(lang="ru")
       script(src='./js/common.js')
       include ./_include/_js-body-bottom
 
-  
-
-  
+      script.
+        // Menu user account
+        var slideout = new Slideout({
+          'panel': document.getElementById('panel'),
+          'menu': document.getElementById('menu'),
+          'padding': 290,
+          'tolerance': 70
+        });
+      
+        $('.user__navigation__close').on('click', function(e){
+          e.preventDefault();
+          slideout.close();
+        });
+        $('.user__menu').on('click', function(e){
+          e.preventDefault();
+          slideout.toggle();
+        });
