--- a/_gulp/_sass/1-base/_base.sass
+++ b/_gulp/_sass/1-base/_base.sass
@@ -339,4 +339,6 @@ ol li
 .color
   display: inline-block
   &--blue
-    color: $color-blue
+    color: $color-blue !important
+  &--red
+    color: $color-red !important
