--- a/_gulp/_sass/4-utils/_media-queries.sass
+++ b/_gulp/_sass/4-utils/_media-queries.sass
@@ -65,7 +65,7 @@
     &__strong
       font-size: rem(85)
       left: 21px
-      bottom: 28px
+      // bottom: 28px
     &__text
 
       &::after
@@ -227,6 +227,11 @@
     padding: 0
     border: 0
 
+  .form__block__delivery
+    width: 53%
+    float: right
+    margin-top: -177px
+
 /* Small Devices, Tablets */
 @media only screen and (max-width : 767px)
 
@@ -371,7 +376,7 @@
       right: inherit
       transform: none
       top: inherit
-      bottom: -28px
+      bottom: -50px
       z-index: 100
       &::after
         content: ''
@@ -444,7 +449,13 @@
             float: right
             width: 160px
 
+  .pagination--news
+    margin-bottom: 25px
 
+  .form__block__delivery
+    width: 100%
+    float: none
+    margin-top: 0
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 479px)
